--- a/languages/pt.json
+++ b/languages/pt.json
@@ -37,7 +37,7 @@
     "help_website":"Ajuda com planeação ou criação de um website.",
     "edit_photos":"Editar fotos ou criar imagens vectorizadas.",
     "get_photos":"Se estás interessado em adquirir alguma das fotos em alta qualidade.",
-    "services_info":"*Todos os serviços estão sujeitos a tempo e disponibilidado. É só algo que faço no meu tempo livre.*",    
+    "services_info":"*Todos os serviços estão sujeitos a tempo e disponibilidade. É só algo que faço no meu tempo livre.*",    
     "category":"Categoria",
     "event":"Evento",
     "date":"Data"
