--- a/languages/en.json
+++ b/languages/en.json
@@ -33,7 +33,7 @@
     "services_details":"Feel free to reach out via email if you need anything. Take a look to see if any of the following services catch your interest.",
     "editing":"Editing",
     "photo_acquisiton":"Acquire Photos",
-    "hq_photos_taken":"Need high quality photos taken.",
+    "hq_photos_taken":"Should you need high quality photos and/or videos taken.",
     "help_website":"Help in planning or creating a website.",
     "edit_photos":"Edit photos or create vector images.",
     "get_photos":"Interested in getting one of the photos in high quality.",
