--- a/languages/pt.json
+++ b/languages/pt.json
@@ -33,7 +33,7 @@
     "services_details":"Se precisares de alguma coisa, não hesites em contactar via email. Verifica se algum dos seguintes serviços te interessa.",
     "editing":"Edição",
     "photo_acquisiton":"Aquisição Fotos",
-    "hq_photos_taken":"Tirar fotos em alta qualidade.",
+    "hq_photos_taken":"Tirar fotos e/ou videos de alta qualidade.",
     "help_website":"Ajuda com planeação ou criação de um website.",
     "edit_photos":"Editar fotos ou criar imagens vectorizadas.",
     "get_photos":"Se estás interessado em adquirir alguma das fotos em alta qualidade.",
