--- a/languages/en.json
+++ b/languages/en.json
@@ -1,7 +1,7 @@
 {
     "welcome_message": "A collection of",
     "about": "About",
-    "intro":"Hello, I'm Tiago. I'm from Portugal, my professional focus is in tech or developing software, with a background in computer science. Beyond work, I'm focusing on photography, reading, traveling, arts and entertainment. In a nutshell, these details offer a glimpse into who I am.",
+    "intro":"Hello, I'm Tiago Batista. I'm from Portugal, my professional focus is in tech or developing software, with a background in computer science. Beyond work, I'm focusing on photography, reading, traveling, arts and entertainment. In a nutshell, these details offer a glimpse into who I am.",
     "details":"Some details",
     "basic_info":"You can take a look about some basic info",
     "bday_label":"Birthday",
