--- a/languages/pt.json
+++ b/languages/pt.json
@@ -1,7 +1,7 @@
 {
     "welcome_message": "Uma coleção de ",
     "about": "Acerca",
-    "intro":"Olá, chamo-me Tiago. Sou de Portugal, o meu foco profissional é na área da tecnologia ou desenvolvimento de software, com formação em informática. Para além do trabalho, dedico-me à fotografia, leitura, viajar, artes e entretenimento. Em poucas palavras, estes detalhes oferecem um apanhado de quem eu sou.",
+    "intro":"Olá, chamo-me Tiago Batista. Sou de Portugal, o meu foco profissional é na área da tecnologia ou desenvolvimento de software, com formação em informática. Para além do trabalho, dedico-me à fotografia, leitura, viajar, artes e entretenimento. Em poucas palavras, estes detalhes oferecem um apanhado de quem eu sou.",
     "details":"Alguns detalhes",
     "basic_info":"Podes dar uma olhadela nalgumas informações básicas",
     "bday_label":"Nascimento",
